2008-01-05  Jonathan Pobst  <monkey@jpobst.com>

	* TextControl.cs: When deleting multiple line selections, we need
	to invalidate every line beginning at the first line of the selection.
	Patch from Luke Page fixes bug #351791.

2008-01-04  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListControl.cs: When getting a CurrencyManager.PositionChanged
	event, don't set SelectedIndex if the number of items is 1. This is
	because, for the first item, PositionChanged is fired _before_
	ItemChanged (the place where we actually populate the items), and
	leave us in a temporary invalid state (since items collection is
	empty).
	Fixes #349655.

2008-01-04  Geoff Norton  <gnorton@novell.com>

	* XplatUICarbon.cs:  Create native toolwindows instead of
	the managed drawing ones.

2008-01-03  Jonathan Pobst  <monkey@jpobst.com>

	* LineTag.cs: If the line doesn't have any characters, return
	0 for GetCharIndex.  Fixes an AOORE exception after certain
	caret movements.  Fixes bug #351683.  Patch by Luke Page.

2008-01-03  Jonathan Pobst  <monkey@jpobst.com>

	* TextBoxBase.cs: Apply patch from Luke Page so when backspace
	is hit when there is selected text, only the selected text gets
	deleted, not the character in front of the selection as well.
	Fixes bug #351578.

2008-01-03  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ComboBox.cs: When the values are displayed, calculate the
	ComboListBox scrollbar's LargeChange based on the visible area's
	height and  the actuall ItemHeight, instead of calculating it
	based on MaxDropItems value, since it's not used by our _current_ 
	2.0 profile.
	Fixes #332366.

2008-01-03  Jonathan Pobst  <monkey@jpobst.com>

	* Line.cs, LineTag.cs, RichTextBox.cs, TextBoxBase.cs, TextControl.cs:
	Patch from Luke Page that fixes issues with font colors and styles
	not showing up in a readonly RichTextBox.  Fixes bug #324354.

2008-01-03  Jonathan Pobst  <monkey@jpobst.com>
